k8s/spring-boot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
        - name: springboot-app
          image:  138383657739.dkr.ecr.ap-south-1.amazonaws.com/springboot-devops-app:68
          ports:
            - containerPort: 9090
---

apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: ClusterIP
  selector:
    app: springboot-app
  ports: 
    - port: 80
      targetPort: 9090
