k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: springboot-ingress
#   namespace: default
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
# spec:
#   ingressClassName: alb
#   rules:
#     - http:
#         paths:
#           - path: /update
#             pathType: Prefix
#             backend:
#               service:
#                 name: springboot-service
#                 port:
#                   number: 80
#           - path: /post
#             pathType: Prefix
#             backend:
#               service:
#                 name: springboot-service
#                 port:
#                   number: 80
#           - path: /delete
#             pathType: Prefix
#             backend:
#               service:
#                 name: springboot-service
#                 port:
#                   number: 80
#           - path: /book
#             pathType: Prefix
#             backend:
#               service:
#                 name: springboot-service
#                 port:
#                   number: 80



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: / 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-service
                port:
                  number: 80
